--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 <style>
 
+
 /*======================================
 //--//-->   ABOUT
 ======================================*/
@@ -137,17 +138,19 @@
 	      </div>
 	    </div>
 	  </nav>
+	  
 	  <section id="home-section" class="hero">
 		  <div class="home-slider  owl-carousel">
 	       <div class="slider-item ">
 	      	<div class="overlay"></div>
 	         <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_2.png);"> <!-- Add photo of size 1000 * 1197-->
+	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/main.png); background-position: center;"> <!-- Add photo of size 1000 * 1197-->
 	          	 <div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
+						<br/><br/>
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Manushi Patel</span></h1>
 
