--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/1DmbpyDQ_BZn358ZnsGJBtN7UVzpUHg2A/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download Resume</a></p>
+    				<p><a href="https://drive.google.com/file/d/1xDJzZ1D_F25Y4W_taTeNkGs4UkycDa-v/view?usp=sharing" class="btn btn-primary py-4 px-5">Download Resume</a></p>
     			</div>
     		</div>
     	</div>
