--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/manupatel20/Google-Cloud-Data-Pipeline">Google Cloud Data Pipeline</a></h3>
-                <p>Automates the process of uploading files to Google Cloud Storage (GCS) and loading the data into Google BigQuery.</p>
+                <p>This pipeline automates the process of uploading files to Google Cloud Storage (GCS) and loading the data into Google BigQuery</p>
               </div>
             </div>
           </div>
@@ -445,7 +445,7 @@
 			<div class="text mt-3 float-right d-block">
 
 			  <h3 class="heading"><a href="https://github.com/manupatel20/StockVision">Stock Prediction - Time Series Forecasting</a></h3>
-			  <p>Stock Vision is a machine learning-powered web application that predicts stock prices using LSTM model.</p>
+			  <p>Stock Vision is a machine learning-powered web application developed in Python that predicts stock prices using LSTM model</p>
 			</div>
 		  </div>
 		  </div>
@@ -456,7 +456,7 @@
 			<div class="text mt-3 float-right d-block">
 
 			  <h3 class="heading"><a href="https://github.com/manupatel20/Transportation-Data-Science-Project">Transportation Data Science Project</a></h3>
-			  <p>Conducted an in-depth analysis of transportation safety data set from 'Chicago Data Portal' to support risk assessment and decision-making in public transit by creating insightful visualizations in PowerBi.</p>
+			  <p>Analyzed transportation safety data from the Chicago Data Portal using Python to support public transit risk assessment, and developed impactful visualizations in Power BI for data-driven decision-making</p>
 			</div>
 		   </div>
 		  </div>
@@ -471,7 +471,7 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/manupatel20/Company-Performance-Dashboard---Plants-data">Power BI Sales dashboard Project for Beginners</a></h3>
-                <p>Designed a power bi dashboard that visualizes key performance metrics for multiple plants. It is built using Python, Streamlit, Pandas, and Plotly. The dashboard provides insights into plant performance, including production efficiency, downtime, and other critical metrics..</p>
+                <p>Designed a power bi dashboard that visualizes key performance metrics for multiple plants. It is built using Python, Streamlit, Pandas, and Plotly. The dashboard provides insights into plant performance, including production efficiency, downtime, and other critical metrics</p>
               </div>
             </div>
           </div>
@@ -486,7 +486,7 @@
 				<div class="text mt-3 float-right d-block">
   
 				  <h3 class="heading"><a href="https://github.com/manupatel20/Cold-Mail-Generation-tool">Code Mail Generation Tool</a></h3>
-				  <p>It is a tool developed using groq, langchain and streamlit. It allows user to input the URL of a company's careers page. The tool then extracts job listings from that page and generates personalized cold emails. </p>
+				  <p>Built a Python-based tool using Groq, Langchain, and Streamlit that scrapes job listings from a company’s careers page URL and generates personalized cold emails for outreach</p>
 				</div>
 			  </div>
 			</div>
