--- a/index.html
+++ b/index.html
@@ -443,6 +443,18 @@
 		
 		<!-- First Row -->
         <div class="row d-flex">
+		  
+		  <div class="col-md-4 d-flex ftco-animate">
+			<div class="blog-entry justify-content-end">
+			<a href="" class="block-20" style="background-image: url('images/OMOPify.png'); background-size: contain;">
+			</a>
+			<div class="text mt-3 float-right d-block">
+
+			  <h3 class="heading"><a href="">OMOPify</a></h3>
+			  <p>Implemented data transformation pipeline to convert FHIR and Synthea datasets into the OMOP Common Data Model, enabling standardized clinical research and interoperability. Integrated PostgreSQL with OHDSI ATLAS/WebAPI using R, supporting cohort analysis and real-world evidence generation.</p>
+			</div>
+		  </div>
+		  </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
               <a href="https://github.com/manupatel20/Google-Cloud-Data-Pipeline" class="block-20 zoom-effect" style="background-image: url('images/proj_1.png');">
@@ -462,17 +474,6 @@
 
 			  <h3 class="heading"><a href="https://github.com/manupatel20/StockVision">Stock Prediction - Time Series Forecasting</a></h3>
 			  <p>Stock Vision is a machine learning-powered web application developed in Python that predicts stock prices using LSTM model</p>
-			</div>
-		  </div>
-		  </div>
-		  <div class="col-md-4 d-flex ftco-animate">
-			<div class="blog-entry justify-content-end">
-			<a href="https://github.com/manupatel20/OMOPify" class="block-20" style="background-image: url('images/OMOPify.png'); background-size: contain;">
-			</a>
-			<div class="text mt-3 float-right d-block">
-
-			  <h3 class="heading"><a href="https://github.com/manupatel20/OMOPify">OMOPify</a></h3>
-			  <p>Implemented data transformation pipeline to convert FHIR and Synthea datasets into the OMOP Common Data Model, enabling standardized clinical research and interoperability. Integrated PostgreSQL with OHDSI ATLAS/WebAPI using R, supporting cohort analysis and real-world evidence generation.</p>
 			</div>
 		  </div>
 		  </div>
