change in resume

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 					<div class="resume-wrap ftco-animate">
 						<span class="date">JUN 2025 - Present</span>
 						<h2>Software Developer Intern</h2>
-						<span class="position">Leap of Faith Tech.</span>
+						<span class="position">Leap of Faith Tech. LLC</span>
 						<p class="mt-4">Leap of Faith® Technologies develops AI-driven healthcare tools, analytics, and education solutions to accelerate innovation and improve patient care.
 							<ul>
 								<li>Patrol App Testing: Set up Android/iOS environments, debugged code, and developed automated patrol test cases to ensure app reliability. Created, formatted, and separated test flows for multiple tickets using Jira.</li>
@@ -423,7 +423,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/11kOJZQ5KMNQ-Jhptz78olYS3D2XZp98N/view?usp=sharing" class="btn btn-primary py-4 px-5">Download Resume</a></p>
+    				<p><a href="files/1_Resume - 23-Aug-2025.pdf" class="btn btn-primary py-4 px-5" download target="_blank" rel="noopener">Download Resume</a></p>
     			</div>
     		</div>
     	</div>
